--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         <h2 class="title">Danh sách truyện đề cử</h2>
         <div class="row">
             <div class="col-4">
-                <img src="assets/images/anhbia1.jpg" alt="">
+                <a href="detail.html"><img src="assets/images/anhbia1.jpg" alt=""></a>
+
                 <h4>Định mệnh của đời tôi</h4>
                  <div class="ratting">
                     <i class="fa-solid fa-star"  ></i>
