--- a/detail.html
+++ b/detail.html
@@ -93,9 +93,18 @@
                     </tr>
                     </tbody>
                 </table>
-                <div>
+                <span class="pr-2">
                     <i class="fas fa-heart fa-fw"></i> Thích
-                </div>
+                </span>
+                <span class="pr-2">
+                    <i class="fa-solid fa-bookmark"></i> Follow
+                </span>
+                <span class="pr-2">
+                    <i class="fa-solid fa-share"></i> Chia sẻ
+                </span>
+                <span class="pr-2">
+                    <i class="fa-solid fa-warning"></i> Báo cáo
+                </span>
             </div>
             <div class="col-4"></div>
         </div>
