--- a/detail.html
+++ b/detail.html
@@ -48,7 +48,7 @@
                     <img src="assets/images/anhbia1.jpg" alt="" class="image-round">
                 </div>
                 <div>
-                    <b>Định mệnh của đời tôi</b><br/>
+                    <b>Bích Liên Hoa</b><br/>
                     <span>09/02/2024 09:48 5.99 K lượt truy cập</span>
                 </div>
             </div>
