--- a/detail.html
+++ b/detail.html
@@ -10,19 +10,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
           integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="assets/base.css">
+         
     <link rel="stylesheet" href="assets/detail.css">
     <link rel="stylesheet" href="assets/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="assets/base.css">
+    <link rel="stylesheet" href="assets/styleindex.css">
 
 </head>
 <body style="background: #eee">
-<div class="header header-one">
-    <div class="container">
-        <div class="navbar">
-            <div class="logo">
-                <img src="assets/images/logo.jpg" width="125px">
-            </div>
-            <nav>
+    <div class="header header-one">
+        <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <img src="assets/images/logo.jpg" width="125px">
+                </div>
+                <nav>
                 <ul id="menu-item">
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="dstruyen.html">Truyện</a></li>
@@ -30,12 +34,12 @@
                     <li><a href="dangkyform.html">Đăng ký</a></li>
                     <li><a href="">Tài khoản</a></li>
                 </ul>
-            </nav>
-            <img src="assets/images/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
+                </nav>
+                <img src="assets/images/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
+            </div>
         </div>
+        
     </div>
-
-</div>
 <!-- xong phần header -->
 <div class="container">
     <div class="danhmuc">
